Updated some features

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="New BlockCraft - A remastered version of the original BlockCraft game. Explore, build, and craft your world with new features!">
-    <title>New BlockCraft - The Remastered Experience</title>
+    <title>New BlockCraft</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -30,17 +30,6 @@
         }
         nav a:hover {
             color: #555;
-        }
-        .hero {
-            background-image: url('new-blockcraft-hero.jpg');
-            background-size: cover;
-            background-position: center;
-            height: 300px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
         .hero h1 {
             font-size: 3em;
@@ -109,7 +98,7 @@
 <section id="download">
     <h2>Download New BlockCraft</h2>
     <p>Ready to play? Click below to download New BlockCraft for your platform:</p>
-    <button><a href="download-link" style="text-decoration: none; color: #000;">Download Now</a></button>
+    <button><a href="download-link" style="text-decoration: none; color: #000;">PC</a></button>
 </section>
 
 <footer>
